--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -7,6 +7,7 @@ $colorAccentCyan: hsl(176, 68%, 64%) //inside call-to-action gradient
 $colorAccentBlue: hsl(198, 60%, 50%) //inside call-to-action gradient
 $colorWhite: hsl(0, 0%, 100%)
 $text: #333
+$accent: $colorWhite
 
 // Bootstrap compatible gutter variable => $gutter
 $grid-gutter-width: 20px
