--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -18,18 +18,61 @@ input, textarea
 
 body
 	font-size: 14px
-	min-width: 320px
+	min-width: 375px
 	position: relative
 	line-height: 1.65
 	font-family: 'Roboto', sans-serif
 	overflow-x: hidden
-	color: $text
+	color: $colorWhite
+	margin: 0 auto
+	display: grid
+	grid-template-rows: repeat(3, auto)
 
+
+.maxWidth
+	max-width: 1440px
+	margin: 0 auto
+	padding: 0 78px
 // Custom Sass / Remove before use
 
 header
 	background-color: $colorDarkBlueIntro
-	color: $colorWhite
+	.maxWidth
+		display: grid
+		margin:
+			top: 70px
+		.headerFix
+			display: grid
+			grid-template-columns: repeat(2, 1fr)
+			.menu ul
+				display: flex
+				list-style: none
+				justify-content: flex-end
+				li
+					padding-right: 55px
+		.headerIntro
+			display: grid
+			grid-template-columns: minmax(auto, 700px)
+			justify-content: center
+			text-align: center
+			img
+				width: 100%
+				height: auto
+
+main
+	background-color: $colorDarkBlueMain
+	display: grid
+	grid-template-rows: repeat(3, auto)
+	justify-items: center
+	.mainBlock
+		display: grid
+		grid-template-columns: repeat(2, 1fr)
+		text-align: center
+	.productive
+
+
+footer
+	background-color: $colorDarkBlueFooter
 
 //.container
 //	max-width: 700px
