--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -57,8 +57,14 @@ header
 					> a
 						color: $colorWhite
 						&:hover
+							color: $colorDarkBlueMain
 							text-decoration: none
-
+							border: 1px solid $colorWhite
+							padding: 7px 15px
+							background-color: $colorWhite
+							border-radius: 40px
+							transform: scale(0)
+							transition: all .3s ease
 		.headerIntro
 			display: grid
 			grid-template-columns: minmax(auto, 700px)
@@ -82,7 +88,6 @@ header
 				&:hover
 					background-color: $colorAccentCyan
 					transition: all .3s ease-in
-
 main
 	background-color: $colorDarkBlueMain
 	display: grid
@@ -101,7 +106,6 @@ main
 			justify-items: center
 			&:hover
 				transform: scale(1.2)
-
 	.productive
 		display: grid
 		grid-template-columns: repeat(2, minmax(auto, 550px))
@@ -127,9 +131,12 @@ main
 		grid-template-columns: repeat(3, 360px)
 		grid-column-gap: 40px
 		padding-bottom: 200px
+		padding-top: 50px
+		background: url("../img/_src/bg-quotes.png") no-repeat 5.5% 4%
 		article
 			background: $colorDarkBlueTM
 			padding: 45px 27px 27px
+			border-radius: 5px
 			.blockName
 				display: grid
 				grid-template-columns: 30px 1fr
@@ -146,7 +153,6 @@ main
 						margin: 0
 						&:first-child
 							font-weight: 700
-
 footer
 	background-color: $colorDarkBlueFooter
 	font-size: .8rem
@@ -194,13 +200,28 @@ footer
 				display: grid
 				grid-template-columns: repeat(2, 1fr)
 			li
+				display: inline-block
 				list-style: none
 				margin-bottom: 10px
+				&::after
+					content: ""
+					display: block
+					position: relative
+					width: 20%
+					color: $colorAccentCyan
+					border-bottom: 2px solid $colorAccentCyan
+					transform: scale(0)
+					transition: all .3s ease-out
+					transform-origin: left
+				&:hover::after
+					transform: scale(1)
 				a
 					color: $colorWhite
+					text-decoration: none
 					&:hover
 						color: $colorAccentCyan
-						text-decoration: none
+						font-weight: bold
+
 		.socials
 			img
 				width: 30px
