--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -137,6 +137,9 @@ main
 			background: $colorDarkBlueTM
 			padding: 45px 27px 27px
 			border-radius: 5px
+			&:hover
+				box-shadow: 0 0 15px 2px lighten($colorDarkBlueTM, 20%)
+				transform: scale(1.1)
 			.blockName
 				display: grid
 				grid-template-columns: 30px 1fr
@@ -177,11 +180,15 @@ footer
 			padding: 8px 25px
 			margin-right: 20px
 		button
+			font-weight: bold
 			background: $colorAccentBlue
 			color: $colorWhite
 			border-radius: 40px
 			border: none
 			padding: 8px 25px
+			&:hover
+				background-color: $colorAccentCyan;
+				transition: all .3s ease-in;
 	.footerLogo
 		margin-bottom: 40px
 	.blockFooter
@@ -195,6 +202,9 @@ footer
 			display: grid
 			grid-template-columns: 30px 1fr
 			align-self: center
+			a
+				text-decoration: none
+				color: $colorWhite
 		.footerMenu
 			ul
 				display: grid
@@ -223,8 +233,12 @@ footer
 						font-weight: bold
 
 		.socials
-			img
+			svg
 				width: 30px
+				fill: $colorWhite
+				&:hover
+					transform: scale(1.3)
+					fill: $colorAccentCyan
 
 .attribution
 	margin-top: 50px
