Setting blocks (CSS)

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -187,8 +187,8 @@ footer
 			border: none
 			padding: 8px 25px
 			&:hover
-				background-color: $colorAccentCyan;
-				transition: all .3s ease-in;
+				background-color: $colorAccentCyan
+				transition: all .3s ease-in
 	.footerLogo
 		margin-bottom: 40px
 	.blockFooter
