--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -26,11 +26,13 @@ body
 	color: $colorWhite
 	margin: 0 auto
 	display: grid
+	grid-template-columns: 1fr
 	grid-template-rows: repeat(3, auto)
 
 
 .maxWidth
 	max-width: 1440px
+	min-width: 320px
 	margin: 0 auto
 	padding: 0 78px
 // Custom Sass / Remove before use
@@ -90,16 +92,18 @@ header
 					transition: all .3s ease-in
 main
 	background-color: $colorDarkBlueMain
+	max-width: 100vw
 	display: grid
 	grid-template-rows: repeat(3, auto)
 	grid-row-gap: 130px
 	justify-items: center
 	.mainBlock
 		display: grid
-		grid-template-columns: repeat(2, minmax(auto, 360px))
+		grid-template-columns: repeat(auto-fill, minmax(auto, 360px))
+		max-width: 100vw
 		text-align: center
 		grid-row-gap: 90px
-		grid-column-gap: 130px
+		grid-column-gap: 70px
 		.item1
 			display: grid
 			grid-row-gap: 30px
@@ -128,8 +132,9 @@ main
 				border-bottom: 1px $colorAccentBlue solid
 	.mainComment
 		display: grid
-		grid-template-columns: repeat(3, 360px)
+		grid-template-columns: repeat(auto-fit, minmax(auto, 360px))
 		grid-column-gap: 40px
+		grid-row-gap: 40px
 		padding-bottom: 200px
 		padding-top: 50px
 		background: url("../img/_src/bg-quotes.png") no-repeat 5.5% 4%
