--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -44,8 +44,7 @@ header
 	padding-bottom: 160px
 	.maxWidth
 		display: grid
-		margin:
-			top: 70px
+		margin-top: 70px
 		.headerFix
 			display: grid
 			grid-template-columns: repeat(2, 1fr)
@@ -74,6 +73,7 @@ header
 			justify-content: center
 			text-align: center
 			img
+				object-fit: cover
 				width: 100%
 				height: auto
 			h1
@@ -90,6 +90,8 @@ header
 				&:hover
 					background-color: $colorAccentCyan
 					transition: all .3s ease-in
+			+media-breakpoint-between(xs, md)
+				grid-template-columns: minmax(auto, 200px)
 main
 	background-color: $colorDarkBlueMain
 	max-width: 100vw
@@ -194,6 +196,8 @@ footer
 			&:hover
 				background-color: $colorAccentCyan
 				transition: all .3s ease-in
+			+media-breakpoint-between(xs, 1156px)
+				margin-top: 20px
 	.footerLogo
 		margin-bottom: 40px
 	.blockFooter
@@ -218,6 +222,7 @@ footer
 				display: inline-block
 				list-style: none
 				margin-bottom: 10px
+				padding-right: 20px
 				&::after
 					content: ""
 					display: block
@@ -236,7 +241,17 @@ footer
 					&:hover
 						color: $colorAccentCyan
 						font-weight: bold
-
+		+media-breakpoint-between(xs, md)
+			grid-template-columns: 1fr
+			grid-row-gap: 40px
+			justify-items: center
+			ul
+				grid-template-columns: 1fr
+				grid-column-gap: 40px
+			.location
+				max-width: 70vw
+				text-align: center
+				margin-right: 50px
 		.socials
 			svg
 				width: 30px
@@ -244,7 +259,9 @@ footer
 				&:hover
 					transform: scale(1.3)
 					fill: $colorAccentCyan
-
+			+media-breakpoint-between(xs, md)
+				svg
+					margin-right: 30px
 .attribution
 	margin-top: 50px
 
