--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -18,7 +18,7 @@ input, textarea
 
 body
 	font-size: 14px
-	min-width: 375px
+	//min-width: 375px
 	position: relative
 	line-height: 1.65
 	font-family: 'Roboto', sans-serif
@@ -35,6 +35,8 @@ body
 	min-width: 320px
 	margin: 0 auto
 	padding: 0 78px
+	+media-breakpoint-between(xs, 1156px)
+		padding: 0 40px
 // Custom Sass / Remove before use
 
 header
@@ -55,7 +57,7 @@ header
 				justify-content: flex-end
 				li
 					padding-right: 55px
-					> a
+					>a
 						color: $colorWhite
 						&:hover
 							color: $colorDarkBlueMain
@@ -66,6 +68,8 @@ header
 							border-radius: 40px
 							transform: scale(0)
 							transition: all .3s ease
+			+media-breakpoint-between(xs, 1156px)
+				grid-template-columns: 34% 66%
 		.headerIntro
 			display: grid
 			grid-template-columns: minmax(auto, 700px)
@@ -91,7 +95,9 @@ header
 					background-color: $colorAccentCyan
 					transition: all .3s ease-in
 			+media-breakpoint-between(xs, md)
-				grid-template-columns: minmax(auto, 200px)
+				grid-template-columns: 1fr
+				h1
+					font-size: 1.8rem
 main
 	background-color: $colorDarkBlueMain
 	max-width: 100vw
@@ -186,6 +192,8 @@ footer
 			border: none
 			padding: 8px 25px
 			margin-right: 20px
+			&:focus
+				background: lighten($colorAccentCyan, 20%)
 		button
 			font-weight: bold
 			background: $colorAccentBlue
@@ -197,7 +205,17 @@ footer
 				background-color: $colorAccentCyan
 				transition: all .3s ease-in
 			+media-breakpoint-between(xs, 1156px)
-				margin-top: 20px
+				margin-top: 10px
+		+media-breakpoint-between(xs, 1156px)
+			padding: 20px
+			h2
+				font-size: 1.5rem
+			input
+				padding: 10px 15px
+				width: 90%
+				margin: 0 auto
+			button
+				width: 90%
 	.footerLogo
 		margin-bottom: 40px
 	.blockFooter
@@ -214,6 +232,20 @@ footer
 			a
 				text-decoration: none
 				color: $colorWhite
+				&::after
+					content: ""
+					display: block
+					position: relative
+					width: 20%
+					color: $colorAccentCyan
+					border-bottom: 2px solid $colorAccentCyan
+					transform: scale(0)
+					transition: all .3s ease-out
+					transform-origin: left
+				&:hover
+					color: $colorAccentCyan
+					&::after
+						transform: scale(1)
 		.footerMenu
 			ul
 				display: grid
