Исправление отображения блока main. Исправление блока подписки на новости.

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -244,6 +244,14 @@ footer
 				margin: 0 auto
 			button
 				width: 90%
+		+media-breakpoint-between(xs, md)
+			max-width: 100vw
+			top: -22vh
+			font-size: 1.4rem
+			h2
+				font-size: 2rem
+			p
+				font-size: 1.2rem
 	.footerLogo
 		margin-bottom: 40px
 	.blockFooter
