Исправление отображения блока headerIntro - размер текста.

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -97,7 +97,11 @@ header
 			+media-breakpoint-between(xs, md)
 				grid-template-columns: 1fr
 				h1
-					font-size: 1.8rem
+					font-size: 2rem
+				p
+					font-size: 1.4rem
+				button
+					font-size: 1.4rem
 main
 	background-color: $colorDarkBlueMain
 	display: grid
