--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -70,6 +70,14 @@ header
 							transition: all .3s ease
 			+media-breakpoint-between(xs, 1156px)
 				grid-template-columns: 34% 66%
+			+media-breakpoint-down(xs)
+				grid-template-columns: 1fr
+				.menu ul
+					margin-top: 30px
+					justify-content: space-between
+					padding-inline-start: 0
+					li
+						padding-right: 10px
 		.headerIntro
 			display: grid
 			grid-template-columns: minmax(auto, 700px)
@@ -102,6 +110,12 @@ header
 					font-size: 1.4rem
 				button
 					font-size: 1.4rem
+			+media-breakpoint-down(xs)
+				grid-template-columns: 1fr
+				h1
+					font-size: 1.8rem
+				p
+					font-size: 1.1rem
 main
 	background-color: $colorDarkBlueMain
 	display: grid
@@ -128,6 +142,11 @@ main
 				font-size: 1.4rem
 				h3
 					font-size: 1.8rem
+		+media-breakpoint-down(xs)
+			.item1
+				font-size: 1.1rem
+				h3
+					font-size: 1.6rem
 	.productive
 		display: grid
 		grid-template-columns: repeat(2, minmax(auto, 550px))
@@ -162,6 +181,14 @@ main
 				font-size: 1.4rem
 			a
 				font-size: 1.4rem
+		+media-breakpoint-down(xs)
+			.blockProd2
+				h2
+					font-size: 1.8rem
+				p
+					font-size: 1.1rem
+				a
+					font-size: 1.1rem
 	.mainComment
 		display: grid
 		grid-template-columns: repeat(auto-fit, minmax(auto, 360px))
@@ -191,6 +218,9 @@ main
 						width: 50px
 						img
 							width: 50px
+					+media-breakpoint-down(xs)
+						img
+							width: 30px
 				.nameDescription
 					font-size: .6rem
 					p
@@ -200,14 +230,22 @@ main
 					+media-breakpoint-between(xs, md)
 						p
 							font-size: 1rem
+					+media-breakpoint-down(xs)
+						p
+							font-size: .7rem
 				+media-breakpoint-between(xs, md)
 					grid-column-gap: 30px
+				+media-breakpoint-down(xs)
+					grid-column-gap: 10px
 		+media-breakpoint-between(xs, md)
 			grid-template-columns: 1fr
 			justify-content: center
 			background: url("../img/_src/bg-quotes.png") no-repeat 3% 2.5%
 			article > p
 				font-size: 1.4rem
+		+media-breakpoint-down(xs)
+			article > p
+				font-size: 1rem
 footer
 	background-color: $colorDarkBlueFooter
 	font-size: .8rem
@@ -263,6 +301,12 @@ footer
 				font-size: 2rem
 			p
 				font-size: 1.2rem
+		+media-breakpoint-down(xs)
+			font-size: 1rem
+			h2
+				font-size: 1.8rem
+			p
+				font-size: 1rem
 	.footerLogo
 		margin-bottom: 40px
 		+media-breakpoint-between(xs, md)
@@ -334,7 +378,11 @@ footer
 				font-size: 1.4rem
 			.contacts, .footerMenu
 				font-size: 1.4rem
+		+media-breakpoint-down(xs)
+			.location, .contacts, .footerMenu
+				font-size: 1rem
 		.socials
+			display: flex
 			svg
 				width: 30px
 				fill: $colorWhite
@@ -344,7 +392,10 @@ footer
 			+media-breakpoint-between(xs, md)
 				svg
 					width: 60px
-					margin-right: 30px
+			+media-breakpoint-down(xs)
+				svg
+					width: 40px
+					margin-right: 20px
 .attribution
 	margin-top: 50px
 
